--- a/NTComponents/Form/TnTInputBase.razor.scss
+++ b/NTComponents/Form/TnTInputBase.razor.scss
@@ -1,79 +1,87 @@
 @use '_inputBase.scss' as base;
 
-.tnt-input {
-    position: relative;
-    display: inline-grid;
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    grid-template-areas: "pad1 text pad2";
-    grid-template-columns: 16px 1fr 16px;
-    caret-color: base.$tint-color;
-    cursor: text;
-    color: base.$text-color;
-    transition: 250ms ease-in-out;
-    margin-bottom: 32px;
-
-    @include base.tnt-label;
-
-    @include base.disabled-and-readonly;
-
-    &:has(.tnt-start-icon):has(.tnt-end-icon) {
-        grid-template-areas: "pad1 start-icon pad2 text pad3 end-icon pad4";
-        grid-template-columns: 12px 24px 16px 1fr 16px 24px 12px;
-    }
-
-    &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
-        grid-template-areas: "pad1 start-icon pad2 text pad3";
-        grid-template-columns: 12px 24px 16px 1fr 16px;
-    }
-
-    &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
-        grid-template-areas: "pad1 text pad2 end-icon pad3";
-        grid-template-columns: 16px 1fr 16px 24px 12px;
-    }
-
-    &:has(.tnt-tooltip-icon) {
-        width: calc(100% - 50px);
-    }
-
-    ::deep {
-        input {
-            @include base.default-input;
-
-            &[type="date"], &[type="datetime-local"], &[type="month"], &[type="week"] {
-                padding-left: 16px;
-            }
-
-            &[type="time"] {
-                padding-left: 28px;
-            }
-
-            &::-webkit-calendar-picker-indicator {
-                border-radius: 50%;
-                background-color: color-mix(in srgb, #ffffff 50%, base.$background-color);
-                left: 8px;
-                position: absolute;
-            }
-        }
-
-        .tnt-tooltip-icon {
-            position: absolute;
-            right: -28px;
-            top: 0;
-        }
-
-        @include base.default-icon;
-        @include base.supporting-text;
-    }
+.tnt-input-container {
+    display: grid;
+    grid-template-areas: "container-input container-input tooltip-icon" "supporting-text input-length tooltip-icon";
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr minmax(auto, 8ch) minmax(0, auto);
 
     @include base.tnt-input-length;
-    @include base.invalid;
-    @include base.outlined;
-    @include base.filled;
+    @include base.supporting-text;
 
-    &.tnt-form-compact{
-        @include base.tnt-form-compact;
+
+    .tnt-tooltip-icon {
+        grid-area: tooltip-icon;
+        padding: 0 4px;
+    }
+
+    .tnt-input {
+        grid-area: container-input;
+        position: relative;
+        display: inline-grid;
+        width: 100%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        grid-template-areas: "pad1 text pad2";
+        grid-template-columns: 16px 1fr 16px;
+        caret-color: base.$tint-color;
+        cursor: text;
+        color: base.$text-color;
+        transition: 250ms ease-in-out;
+
+        @include base.tnt-label;
+
+        @include base.disabled-and-readonly;
+
+        &:has(.tnt-start-icon):has(.tnt-end-icon) {
+            grid-template-areas: "pad1 start-icon pad2 text pad3 end-icon pad4";
+            grid-template-columns: 12px 24px 16px 1fr 16px 24px 12px;
+        }
+
+        &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
+            grid-template-areas: "pad1 start-icon pad2 text pad3";
+            grid-template-columns: 12px 24px 16px 1fr 16px;
+        }
+
+        &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
+            grid-template-areas: "pad1 text pad2 end-icon pad3";
+            grid-template-columns: 16px 1fr 16px 24px 12px;
+        }
+
+        &:has(.tnt-tooltip-icon) {
+            width: calc(100% - 50px);
+        }
+
+        ::deep {
+            input {
+                @include base.default-input;
+
+                &[type="date"], &[type="datetime-local"], &[type="month"], &[type="week"] {
+                    padding-left: 16px;
+                }
+
+                &[type="time"] {
+                    padding-left: 28px;
+                }
+
+                &::-webkit-calendar-picker-indicator {
+                    border-radius: 50%;
+                    background-color: color-mix(in srgb, #ffffff 50%, base.$background-color);
+                    left: 8px;
+                    position: absolute;
+                }
+            }
+
+            @include base.default-icon;
+        }
+
+        @include base.invalid;
+        @include base.outlined;
+        @include base.filled;
+
+        &.tnt-form-compact {
+            @include base.tnt-form-compact;
+        }
     }
 }
