--- a/NTComponents/Form/TnTInputFile.razor.scss
+++ b/NTComponents/Form/TnTInputFile.razor.scss
@@ -4,244 +4,256 @@
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 $on-tint-color: var(--tnt-input-on-tint-color);
 
-.tnt-input {
-    position: relative;
-    display: inline-grid;
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    grid-template-areas: "pad1 text pad2" "progress progress progress";
-    grid-template-columns: 16px 1fr 16px;
-    caret-color: base.$tint-color;
-    cursor: pointer;
-    color: base.$text-color;
-    transition: 250ms ease-in-out;
-    margin-bottom: 32px;
+.tnt-input-container {
+    display: grid;
+    grid-template-areas: "container-input container-input tooltip-icon" "supporting-text input-length tooltip-icon";
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr minmax(auto, 8ch) minmax(0, auto);
+    @include base.supporting-text;
 
-    @include base.tnt-label;
-
-
-    &:has(.tnt-start-icon):has(.tnt-end-icon) {
-        grid-template-areas: "pad1 start-icon pad2 text pad3 end-icon pad4" "progress progress progress progress progress progress progress";
-        grid-template-columns: 12px 24px 16px 1fr 16px 24px 12px;
+    ::deep .tnt-tooltip-icon {
+        grid-area: tooltip-icon;
+        padding: 0 4px;
     }
 
-    &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
-        grid-template-areas: "pad1 start-icon pad2 text pad3" "progress progress progress progress progress";
-        grid-template-columns: 12px 24px 16px 1fr 16px;
-    }
+    .tnt-input {
+        grid-area: container-input;
+        position: relative;
+        display: inline-grid;
+        width: 100%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        grid-template-areas: "pad1 text pad2" "progress progress progress";
+        grid-template-columns: 16px 1fr 16px;
+        caret-color: base.$tint-color;
+        cursor: pointer;
+        color: base.$text-color;
+        transition: 250ms ease-in-out;
 
-    &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
-        grid-template-areas: "pad1 text pad2 end-icon pad3" "progress progress progress progress progress";
-        grid-template-columns: 16px 1fr 16px 24px 12px;
-    }
+        @include base.tnt-label;
 
-    &:has(.tnt-tooltip-icon) {
-        width: calc(100% - 50px);
-    }
 
-    &:has(.tnt-tooltip-icon) {
-        width: calc(100% - 50px);
-    }
+        &:has(.tnt-start-icon):has(.tnt-end-icon) {
+            grid-template-areas: "pad1 start-icon pad2 text pad3 end-icon pad4" "progress progress progress progress progress progress progress";
+            grid-template-columns: 12px 24px 16px 1fr 16px 24px 12px;
+        }
 
-    @include base.disabled-and-readonly;
+        &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
+            grid-template-areas: "pad1 start-icon pad2 text pad3" "progress progress progress progress progress";
+            grid-template-columns: 12px 24px 16px 1fr 16px;
+        }
 
-    ::deep {
-        input {
-            @include base.default-input;
-            cursor: inherit;
-            z-index: 1;
+        &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
+            grid-template-areas: "pad1 text pad2 end-icon pad3" "progress progress progress progress progress";
+            grid-template-columns: 16px 1fr 16px 24px 12px;
+        }
 
-            &::file-selector-button {
-                appearance: none;
-                border: none;
-                outline: none;
-                height: 48px;
-                aspect-ratio: 16/9;
-                border-radius: 48px / 100%;
+        &:has(.tnt-tooltip-icon) {
+            width: calc(100% - 50px);
+        }
+
+        &:has(.tnt-tooltip-icon) {
+            width: calc(100% - 50px);
+        }
+
+        @include base.disabled-and-readonly;
+
+        ::deep {
+            input {
+                @include base.default-input;
                 cursor: inherit;
-                background-color: base.$tint-color;
-                color: $on-tint-color;
-                padding: 0px 16px;
-                @include interactable.tnt-interactable(base.$tint-color, $on-tint-color, false);
+                z-index: 1;
+
+                &::file-selector-button {
+                    appearance: none;
+                    border: none;
+                    outline: none;
+                    height: 48px;
+                    aspect-ratio: 16/9;
+                    border-radius: 48px / 100%;
+                    cursor: inherit;
+                    background-color: base.$tint-color;
+                    color: $on-tint-color;
+                    padding: 0px 16px;
+                    @include interactable.tnt-interactable(base.$tint-color, $on-tint-color, false);
+                }
+            }
+
+            @include base.default-icon;
+            @include base.supporting-text;
+
+            .tnt-tooltip-icon {
+                position: absolute;
+                right: -28px;
+                top: 0;
             }
         }
 
-        @include base.default-icon;
-        @include base.supporting-text;
+        @include base.invalid;
 
-        .tnt-tooltip-icon {
-            position: absolute;
-            right: -28px;
-            top: 0;
-        }
-    }
-
-    @include base.invalid;
-
-    &.tnt-form-outlined {
-        border-radius: 4px;
-        background-color: transparent;
-        grid-template-rows: 56px;
-        outline: 1px solid colors.$tnt-color-outline;
-
-        &:before, &:after {
-            content: '';
-            position: absolute;
-            width: calc(100% + 2px);
-            background-color: transparent;
+        &.tnt-form-outlined {
             border-radius: 4px;
-            box-sizing: border-box;
-            border-color: base.$tint-color;
-            border-style: solid;
-            border-radius: inherit;
-            height: calc(100% + 2px);
-            top: -1px;
-            left: -1px;
-            transition: 250ms ease-in-out;
-            pointer-events: none;
-        }
+            background-color: transparent;
+            grid-template-rows: 56px;
+            outline: 1px solid colors.$tnt-color-outline;
 
-        &:before {
-            border-left-width: 2px;
-            border-right-width: 2px;
-            border-top-width: 0;
-            border-bottom-width: 0;
-            transform: rotateX(90deg);
-        }
+            &:before, &:after {
+                content: '';
+                position: absolute;
+                width: calc(100% + 2px);
+                background-color: transparent;
+                border-radius: 4px;
+                box-sizing: border-box;
+                border-color: base.$tint-color;
+                border-style: solid;
+                border-radius: inherit;
+                height: calc(100% + 2px);
+                top: -1px;
+                left: -1px;
+                transition: 250ms ease-in-out;
+                pointer-events: none;
+            }
 
-        &:after {
-            border-top-width: 2px;
-            border-bottom-width: 2px;
-            border-left-width: 0;
-            border-right-width: 0;
-            transform: rotateY(90deg);
-        }
-
-        &:hover {
-            background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
-        }
-
-        &:has(input:focus), &:has(input:active) {
             &:before {
-                transform: rotateX(0deg);
+                border-left-width: 2px;
+                border-right-width: 2px;
+                border-top-width: 0;
+                border-bottom-width: 0;
+                transform: rotateX(90deg);
             }
 
             &:after {
-                transform: rotateY(0deg);
+                border-top-width: 2px;
+                border-bottom-width: 2px;
+                border-left-width: 0;
+                border-right-width: 0;
+                transform: rotateY(90deg);
             }
-        }
 
-        &:has(.tnt-label) {
-            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
-
-                .tnt-label {
-                    transform-origin: left;
-                    background-color: base.$background-color;
-                    padding: 0 4px;
-                }
-
-                &:not(:has(.tnt-start-icon)) {
-                    padding-top: 8px;
-
-                    .tnt-label {
-                        transform: scale(0.75) translateY(-50px);
-                    }
-                }
-
-                &:has(.tnt-start-icon) {
-                    .tnt-label {
-                        transform: scale(0.75) translate(-50px,-38px)
-                    }
-                }
+            &:hover {
+                background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
             }
 
             &:has(input:focus), &:has(input:active) {
-                .tnt-label {
-                    color: base.$tint-color;
+                &:before {
+                    transform: rotateX(0deg);
+                }
+
+                &:after {
+                    transform: rotateY(0deg);
+                }
+            }
+
+            &:has(.tnt-label) {
+                &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+
+                    .tnt-label {
+                        transform-origin: left;
+                        background-color: base.$background-color;
+                        padding: 0 4px;
+                    }
+
+                    &:not(:has(.tnt-start-icon)) {
+                        padding-top: 8px;
+
+                        .tnt-label {
+                            transform: scale(0.75) translateY(-50px);
+                        }
+                    }
+
+                    &:has(.tnt-start-icon) {
+                        .tnt-label {
+                            transform: scale(0.75) translate(-50px,-38px)
+                        }
+                    }
+                }
+
+                &:has(input:focus), &:has(input:active) {
+                    .tnt-label {
+                        color: base.$tint-color;
+                    }
                 }
             }
         }
-    }
 
-    &.tnt-form-filled {
-        border-bottom: 1px solid colors.$tnt-color-outline-variant;
-        border-radius: 4px 4px 0 0;
-        background-color: base.$background-color;
-        grid-template-rows: 68px; // +1 from border-bottom
+        &.tnt-form-filled {
+            border-bottom: 1px solid colors.$tnt-color-outline-variant;
+            border-radius: 4px 4px 0 0;
+            background-color: base.$background-color;
+            grid-template-rows: 68px; // +1 from border-bottom
 
-        &:after {
-            position: absolute;
-            content: '';
-            bottom: 0;
-            height: 2px;
-            width: 100%;
-            left: 0;
-            bottom: 0;
-            background-color: var(--tnt-input-tint-color);
-            transform: rotateY(90deg);
-            transition: 250ms ease-out;
-        }
-
-        &:hover {
-            background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
-        }
-
-        &:has(input:focus), &:has(input:active) {
             &:after {
-                transform: rotateY(0deg);
+                position: absolute;
+                content: '';
+                bottom: 0;
+                height: 2px;
+                width: 100%;
+                left: 0;
+                bottom: 0;
+                background-color: var(--tnt-input-tint-color);
+                transform: rotateY(90deg);
+                transition: 250ms ease-out;
             }
-        }
 
-        &:has(.tnt-label) {
-            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
-                .tnt-label {
-                    transform-origin: left;
-                    transform: scale(0.75) translateY(-32px);
-                }
+            &:hover {
+                background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
             }
 
             &:has(input:focus), &:has(input:active) {
-                .tnt-label {
-                    color: base.$tint-color;
+                &:after {
+                    transform: rotateY(0deg);
                 }
             }
 
-            ::deep {
+            &:has(.tnt-label) {
+                &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+                    .tnt-label {
+                        transform-origin: left;
+                        transform: scale(0.75) translateY(-32px);
+                    }
+                }
 
-                input:not(:placeholder-shown), input:focus, input:active {
-                    transform: translateY(8px)
+                &:has(input:focus), &:has(input:active) {
+                    .tnt-label {
+                        color: base.$tint-color;
+                    }
+                }
+
+                ::deep {
+
+                    input:not(:placeholder-shown), input:focus, input:active {
+                        transform: translateY(8px)
+                    }
+                }
+            }
+
+            &.tnt-placeholder:has(.tnt-label) {
+                ::deep {
+                    input {
+                        transform: translateY(8px);
+                    }
                 }
             }
         }
 
-        &.tnt-placeholder:has(.tnt-label) {
-            ::deep {
-                input {
-                    transform: translateY(8px);
-                }
+        .tnt-input-progress {
+            grid-area: progress;
+
+            .tnt-input-file-progress-title {
+                @include typescale.tnt-label-large;
+                text-align: center;
             }
         }
-    }
 
-    .tnt-input-progress {
-        grid-area: progress;
+        &.tnt-form-compact {
+            @include base.tnt-form-compact;
 
-        .tnt-input-file-progress-title {
-            @include typescale.tnt-label-large;
-            text-align: center;
+            ::deep input::file-selector-button {
+                height: 24px;
+                border-radius: 16px;
+                padding: 0 8px;
+            }
         }
-    }
-
-    &.tnt-form-compact {
-        @include base.tnt-form-compact;
-
-        ::deep input::file-selector-button {
-            height: 24px;
-            border-radius: 16px;
-            padding: 0 8px;
-        }
-
     }
 }
