--- a/NTComponents/Form/TnTInputRadioGroup.razor.scss
+++ b/NTComponents/Form/TnTInputRadioGroup.razor.scss
@@ -2,218 +2,230 @@
 @use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 
-.tnt-input {
-    position: relative;
-    display: inline-grid;
-    grid-template-areas: "pad1 radio pad2";
-    grid-template-columns: 16px 1fr 16px;
-    grid-template-rows: auto;
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    caret-color: base.$tint-color;
-    color: base.$text-color;
-    transition: 250ms ease-in-out;
-    margin-bottom: 18px;
-    appearance: none;
-    border: none;
-    outline: none;
+.tnt-input-container {
+    display: grid;
+    grid-template-areas: "container-input container-input tooltip-icon" "supporting-text input-length tooltip-icon";
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr minmax(auto, 8ch) minmax(0, auto);
 
-    &:has(.tnt-start-icon):has(.tnt-end-icon) {
-        grid-template-areas: "pad1 start-icon pad2 radio pad3 end-icon pad4";
-        grid-template-columns: 12px 24px 16px 1fr 16px 24px 12px;
+    @include base.tnt-input-length;
+    @include base.supporting-text;
+
+
+    ::deep .tnt-tooltip-icon {
+        grid-area: tooltip-icon;
+        padding: 0 4px;
     }
 
-    &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
-        grid-template-areas: "pad1 start-icon pad2 radio pad3";
-        grid-template-columns: 12px 24px 16px 1fr 16px;
-    }
-
-    &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
-        grid-template-areas: "pad1 radio pad2 end-icon pad3";
-        grid-template-columns: 16px 1fr 16px 24px 12px;
-    }
-
-    .tnt-radio-buttons {
-        display: flex;
-        gap: 8px;
-        align-items: start;
-        justify-content: start;
-        grid-area: radio;
-    }
-
-    &.tnt-vertical {
-        .tnt-radio-buttons {
-            flex-direction: column;
-        }
-    }
-
-    .tnt-label {
-        position: absolute;
-        transition: 250ms ease-in-out;
+    .tnt-input {
+        grid-area: container-input;
+        position: relative;
+        display: inline-grid;
+        grid-template-areas: "pad1 radio pad2";
+        grid-template-columns: 16px 1fr 16px;
+        grid-template-rows: auto;
+        width: 100%;
         box-sizing: border-box;
-        z-index: 1;
-        @include typescale.tnt-body-large;
-    }
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        caret-color: base.$tint-color;
+        color: base.$text-color;
+        transition: 250ms ease-in-out;
+        appearance: none;
+        border: none;
+        outline: none;
 
-    @include base.disabled-and-readonly;
-
-    &:has(.tnt-tooltip-icon) {
-        width: calc(100% - 50px);
-    }
-
-    ::deep {
-        @include base.default-icon;
-        @include base.supporting-text;
-
-        .tnt-tooltip-icon {
-            position: absolute;
-            right: -28px;
-            top: 0;
-        }
-    }
-
-    @include base.invalid;
-
-    &.tnt-form-filled {
-        border-bottom: 1px solid colors.$tnt-color-outline-variant;
-        border-radius: 4px 4px 0 0;
-        background-color: base.$background-color;
-
-        &:after {
-            position: absolute;
-            content: '';
-            bottom: 0;
-            height: 2px;
-            width: 100%;
-            left: 0;
-            bottom: 0;
-            background-color: var(--tnt-input-tint-color);
-            transform: rotateY(90deg);
-            transition: 250ms ease-out;
+        &:has(.tnt-start-icon):has(.tnt-end-icon) {
+            grid-template-areas: "pad1 start-icon pad2 radio pad3 end-icon pad4";
+            grid-template-columns: 12px 24px 16px 1fr 16px 24px 12px;
         }
 
-        &:hover {
-            background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
+        &:has(.tnt-start-icon):not(:has(.tnt-end-icon)) {
+            grid-template-areas: "pad1 start-icon pad2 radio pad3";
+            grid-template-columns: 12px 24px 16px 1fr 16px;
         }
 
-        .tnt-label {
-            transform-origin: left;
-            transform: scale(0.75) translate(16px, 0);
-            align-self: start;
+        &:has(.tnt-end-icon):not(:has(.tnt-start-icon)) {
+            grid-template-areas: "pad1 radio pad2 end-icon pad3";
+            grid-template-columns: 16px 1fr 16px 24px 12px;
         }
 
-        &:has(input:focus), &:has(input:active) {
-            &:after {
-                transform: rotateY(0deg);
-            }
-        }
-
-        &:has(.tnt-label) {
-
-            &:has(input:focus), &:has(input:active) {
-                .tnt-label {
-                    color: base.$tint-color;
-                }
-            }
-
-            ::deep {
-                .tnt-radio-input {
-                    transform: translateY(8px)
-                }
-            }
-        }
-
-        &.tnt-placeholder:has(.tnt-label) {
-            ::deep {
-                .tnt-radio-input {
-                    transform: translateY(8px);
-                }
-            }
-        }
-    }
-
-    &.tnt-form-outlined {
-        border-radius: 4px;
-        background-color: transparent;
-        outline: 1px solid colors.$tnt-color-outline;
-
-        .tnt-label {
+        .tnt-radio-buttons {
+            display: flex;
+            gap: 8px;
+            align-items: start;
+            justify-content: start;
             grid-area: radio;
-            transform-origin: left;
-            transform: scale(0.75) translate(16px, -22px);
-            align-self: start;
         }
 
-        &:before, &:after {
-            content: '';
-            position: absolute;
-            width: calc(100% + 2px);
-            background-color: transparent;
-            border-radius: 4px;
-            box-sizing: border-box;
-            border-color: base.$tint-color;
-            border-style: solid;
-            border-radius: inherit;
-            height: calc(100% + 2px);
-            top: -1px;
-            left: -1px;
-            transition: 250ms ease-in-out;
-            pointer-events: none;
-        }
-
-        &:before {
-            border-left-width: 2px;
-            border-right-width: 2px;
-            border-top-width: 0;
-            border-bottom-width: 0;
-            transform: rotateX(90deg);
-        }
-
-        &:after {
-            border-top-width: 2px;
-            border-bottom-width: 2px;
-            border-left-width: 0;
-            border-right-width: 0;
-            transform: rotateY(90deg);
-        }
-
-        &:hover {
-            background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
-        }
-
-        &:has(input:focus), &:has(input:active) {
-            &:before {
-                transform: rotateX(0deg);
+        &.tnt-vertical {
+            .tnt-radio-buttons {
+                flex-direction: column;
             }
+        }
+
+        .tnt-label {
+            position: absolute;
+            transition: 250ms ease-in-out;
+            box-sizing: border-box;
+            z-index: 1;
+            @include typescale.tnt-body-large;
+        }
+
+        @include base.disabled-and-readonly;
+
+        &:has(.tnt-tooltip-icon) {
+            width: calc(100% - 50px);
+        }
+
+        ::deep {
+            @include base.default-icon;
+        }
+
+        @include base.invalid;
+
+        &.tnt-form-filled {
+            border-bottom: 1px solid colors.$tnt-color-outline-variant;
+            border-radius: 4px 4px 0 0;
+            background-color: base.$background-color;
 
             &:after {
-                transform: rotateY(0deg);
+                position: absolute;
+                content: '';
+                bottom: 0;
+                height: 2px;
+                width: 100%;
+                left: 0;
+                bottom: 0;
+                background-color: var(--tnt-input-tint-color);
+                transform: rotateY(90deg);
+                transition: 250ms ease-out;
             }
-        }
 
-        &:has(.tnt-label) {
-            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
-                .tnt-label {
-                    background-color: base.$background-color;
-                    padding: 0 4px;
-                }
+            &:hover {
+                background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
+            }
+
+            .tnt-label {
+                transform-origin: left;
+                transform: scale(0.75) translate(16px, 0);
+                align-self: start;
             }
 
             &:has(input:focus), &:has(input:active) {
-                .tnt-label {
-                    color: base.$tint-color;
+                &:after {
+                    transform: rotateY(0deg);
+                }
+            }
+
+            &:has(.tnt-label) {
+
+                &:has(input:focus), &:has(input:active) {
+                    .tnt-label {
+                        color: base.$tint-color;
+                    }
+                }
+
+                ::deep {
+                    .tnt-radio-input {
+                        transform: translateY(8px)
+                    }
+                }
+            }
+            &:has(.tnt-start-icon) {
+                .tnt-label{
+                    left: 32px;
+                }
+            }
+
+            &.tnt-placeholder:has(.tnt-label) {
+                ::deep {
+                    .tnt-radio-input {
+                        transform: translateY(8px);
+                    }
                 }
             }
         }
-    }
 
-    &.tnt-form-compact {
+        &.tnt-form-outlined {
+            border-radius: 4px;
+            background-color: transparent;
+            outline: 1px solid colors.$tnt-color-outline;
 
-        ::deep .tnt-radio-input {
-            @include base.tnt-form-compact;
-            margin: 2px 0;
+            .tnt-label {
+                grid-area: radio;
+                transform-origin: left;
+                transform: scale(0.75) translate(16px, -22px);
+                align-self: start;
+            }
+
+            &:before, &:after {
+                content: '';
+                position: absolute;
+                width: calc(100% + 2px);
+                background-color: transparent;
+                border-radius: 4px;
+                box-sizing: border-box;
+                border-color: base.$tint-color;
+                border-style: solid;
+                border-radius: inherit;
+                height: calc(100% + 2px);
+                top: -1px;
+                left: -1px;
+                transition: 250ms ease-in-out;
+                pointer-events: none;
+            }
+
+            &:before {
+                border-left-width: 2px;
+                border-right-width: 2px;
+                border-top-width: 0;
+                border-bottom-width: 0;
+                transform: rotateX(90deg);
+            }
+
+            &:after {
+                border-top-width: 2px;
+                border-bottom-width: 2px;
+                border-left-width: 0;
+                border-right-width: 0;
+                transform: rotateY(90deg);
+            }
+
+            &:hover {
+                background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
+            }
+
+            &:has(input:focus), &:has(input:active) {
+                &:before {
+                    transform: rotateX(0deg);
+                }
+
+                &:after {
+                    transform: rotateY(0deg);
+                }
+            }
+
+            &:has(.tnt-label) {
+                &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+                    .tnt-label {
+                        background-color: base.$background-color;
+                        padding: 0 4px;
+                    }
+                }
+
+                &:has(input:focus), &:has(input:active) {
+                    .tnt-label {
+                        color: base.$tint-color;
+                    }
+                }
+            }
+        }
+
+        &.tnt-form-compact {
+            ::deep .tnt-radio-input {
+                margin: 2px 0;
+            }
         }
     }
 }
