--- a/NTComponents/Form/TnTInputSwitch.razor
+++ b/NTComponents/Form/TnTInputSwitch.razor
@@ -1,60 +1,68 @@
 @namespace NTComponents
 @using Microsoft.AspNetCore.Components.Rendering
 @inherits TnTInputBase<bool>
+<div class="tnt-input-container" style="@ElementStyle">
 
-<label class="@ElementClass" title="@ElementTitle" lang="@ElementLang" id="@ElementId" style="@ElementStyle">
-    <span class="tnt-switch-overlay">
-    </span>
-    @if (StartIcon is not null) {
-        @StartIcon.Render("tnt-start-icon")
-    }
+	<label class="@ElementClass" title="@ElementTitle" lang="@ElementLang" id="@ElementId">
+		<span class="tnt-switch-overlay">
+		</span>
+		@if (StartIcon is not null) {
+			@StartIcon.Render("tnt-start-icon")
+		}
 
-    @RenderInputElement
+		@RenderInputElement
 
-    @if (!string.IsNullOrWhiteSpace(SupportingText)) {
-        <span class="tnt-supporting-text">
-            @SupportingText
-        </span>
-    }
+		@if (!string.IsNullOrWhiteSpace(Label)) {
+			<span class="tnt-label">
+				@Label
+			</span>
+		}
 
-    @if (EditContext is not null && !DisableValidationMessage && ValueExpression is not null) {
-        <ValidationMessage TValue="@bool" For="@ValueExpression" class="tnt-components tnt-supporting-text tnt-validation-message" style="color: var(--tnt-color-error)" />
-    }
+		@if (EndIcon is not null) {
+			@EndIcon.Render("tnt-end-icon")
+		}
+	</label>
+	@if (Tooltip is not null) {
+		@TooltipIcon.Render()
+	}
 
-    @if (!string.IsNullOrWhiteSpace(Label)) {
-        <span class="tnt-label">
-            @Label
-        </span>
-    }
+	@if (!string.IsNullOrWhiteSpace(SupportingText) || (EditContext is not null && !DisableValidationMessage && ValueExpression is not null)) {
+		<span class="tnt-supporting-text">
+			@if (EditContext is not null && !DisableValidationMessage && ValueExpression is not null) {
+				<ValidationMessage TValue="@bool" For="@ValueExpression" class="tnt-components tnt-validation-message" />
+			}
+			@SupportingText
+		</span>
+	}
 
-    @if (Tooltip is not null) {
-        @TooltipIcon.Render()
-    }
-
-    @if (EndIcon is not null) {
-        @EndIcon.Render("tnt-end-icon")
-    }
-</label>
+	@if (GetMaxLength() > 0 && RendererInfo.IsInteractive && ShowInputLength) {
+		<span class="tnt-input-length">
+			@if (!RendererInfo.IsInteractive) {
+				<text>@(CurrentValueAsString?.Length ?? 0)/@(GetMaxLength())</text>
+			}
+		</span>
+	}
+</div>
 
 @code {
-    protected override void RenderInputElement(RenderTreeBuilder __builder) {
-        <input type="@Type.ToInputTypeString()"
-               @attributes="AdditionalAttributes"
-               name="@ElementName"
-               title="@FieldIdentifier.FieldName"
-               autofocus="@AutoFocus"
-               autocomplete="@AutoComplete"
-               readonly="@FieldReadonly"
-               disabled="@FieldDisabled"
-               required="@IsRequired()"
-               minlength="@GetMinLength()"
-               maxlength="@GetMaxLength()"
-               min="@GetMinValue()"
-               max="@GetMaxValue()"
-               value="@bool.TrueString"
-               checked="@BindConverter.FormatValue(CurrentValue)"
-               @onchange="@OnChangeAsync"
-               @onblur="OnBlurAsync"
-               @ref="Element" />
-    }
+	protected override void RenderInputElement(RenderTreeBuilder __builder) {
+		<input type="@Type.ToInputTypeString()"
+			   @attributes="AdditionalAttributes"
+			   name="@ElementName"
+			   title="@FieldIdentifier.FieldName"
+			   autofocus="@AutoFocus"
+			   autocomplete="@AutoComplete"
+			   readonly="@FieldReadonly"
+			   disabled="@FieldDisabled"
+			   required="@IsRequired()"
+			   minlength="@GetMinLength()"
+			   maxlength="@GetMaxLength()"
+			   min="@GetMinValue()"
+			   max="@GetMaxValue()"
+			   value="@bool.TrueString"
+			   checked="@BindConverter.FormatValue(CurrentValue)"
+			   @onchange="@OnChangeAsync"
+			   @onblur="OnBlurAsync"
+			   @ref="Element" />
+	}
 }
