--- a/NTComponents/Form/TnTInputBase.razor
+++ b/NTComponents/Form/TnTInputBase.razor
@@ -63,7 +63,7 @@
 			   maxlength="@GetMaxLength()"
 			   min="@GetMinValue()"
 			   max="@GetMaxValue()"
-			   onkeydown="NTComponents.formKeyDownSupportingTextHandler(event)"
+			   onkeypress="NTComponents.formKeyDownSupportingTextHandler(event)"
 			   @bind-value:get="@CurrentValueAsString"
 			   @bind-value:set="(newValue) => OnInputAsync(newValue)"
 			   @bind-value:event="@(BindOnInput ? "oninput" : "onchange")"
