--- a/NTComponents/Form/TnTInputCurrency.razor
+++ b/NTComponents/Form/TnTInputCurrency.razor
@@ -20,7 +20,7 @@
                maxlength="@GetMaxLength()"
                min="@GetMinValue()"
                max="@GetMaxValue()"
-               onkeydown="NTComponents.enforceCurrencyFormat(event); NTComponents.formKeyDownSupportingTextHandler(event)"
+               onkeypress="NTComponents.enforceCurrencyFormat(event); NTComponents.formKeyDownSupportingTextHandler(event)"
                onkeyup="NTComponents.formatToCurrency(event)"
                cultureCode="@CultureCode"
                currencyCode="@CurrencyCode"
