--- a/NTComponents/Form/TnTInputTextArea.razor
+++ b/NTComponents/Form/TnTInputTextArea.razor
@@ -55,7 +55,7 @@
 				  maxlength="@GetMaxLength()"
 				  min="@GetMinValue()"
 				  max="@GetMaxValue()"
-				  onkeydown="NTComponents.formKeyDownSupportingTextHandler(event)"
+				  onkeypress="NTComponents.formKeyDownSupportingTextHandler(event)"
 				  @bind-value:get="@CurrentValueAsString"
 				  @bind-value:set="(newValue) => OnInputAsync(newValue)"
 				  @bind-value:event="@(BindOnInput ? "oninput" : "onchange")"
