--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -55,6 +55,17 @@
 		<TnTCard Appearance="CardAppearance.Elevated">
 			<TnTRow>
 				<h3>
+					Full Row
+				</h3>
+				<TnTColumn S="12">
+					<TnTInputText @bind-Value="@Input.Text" BindOnInput="true" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" BackgroundColor="@(_appearance == FormAppearance.Filled ? TnTColor.SurfaceContainerHighest : TnTColor.Surface)" Tooltip="@(_g? _tooltip : null)" />
+				</TnTColumn>
+				<TnTColumn S="12">
+					<TnTInputText @bind-Value="@Input.Text" BindOnInput="true" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" BackgroundColor="@(_appearance == FormAppearance.Filled ? TnTColor.SurfaceContainerHighest : TnTColor.Surface)" Tooltip="@(_g? _tooltip : null)" />
+				</TnTColumn>
+			</TnTRow>
+			<TnTRow>
+				<h3>
 					Text @Input.Text
 				</h3>
 				<TnTColumn S="6">
